infrastructure/k8s-cloud/postgres-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-application
  template:
    metadata:
      labels:
        app: postgres-application
    spec:
      containers:
        - name: postgres-application
          image: postgres:latest
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: configmap-volume
              readOnly: true
            - mountPath: /var/lib/postgresql/data
              name: postgres-application-pvc
              subPath: postgres-app
      volumes:
        - name: configmap-volume
          configMap:
            name: relation-sql
        - name: postgres-application-pvc
          persistentVolumeClaim:
            claimName: postgres-application-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-application
spec:
  selector:
    app: postgres-application
  ports:
    - port: 5432
