infrastructure/k8s-cloud/postgres-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloak
spec:
  selector:
    matchLabels:
      app: postgres-keycloak
  template:
    metadata:
      labels:
        app: postgres-keycloak
    spec:
      containers:
        - image: postgres:latest
          name: postgres-keycloak
          volumeMounts:
            - name: postgres-storage
              mountPath: "/var/lib/postgresql/data"
              subPath: postgres-key
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-keycloak-pvc
