infrastructure/k8s-cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-entrypoint
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "34.68.123.456.xip.io"
      http:
        paths:
          - path: "/grafana(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: "/keycloak(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: "/student(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-service
                port:
                  number: 5050
          - path: "/teacher(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: teacher-service
                port:
                  number: 5173
          - path: "/adminer(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: adminer
                port:
                  number: 8080
